Fixed bug where feature-bubbles-aside overlay was off-center.

--- a/_sass/components/feature-bubbles-aside.scss
+++ b/_sass/components/feature-bubbles-aside.scss
@@ -5,6 +5,7 @@
 	background-size: cover;
 	background-position: center;
 	position: relative;
+	overflow: hidden;
 	&:before {
 		content: ''	;
 		background-color: $hs-blue-grey-900;
@@ -13,6 +14,8 @@
 		height: 100%;
 		position: absolute;
 		opacity: 0.9;
+		top: 0;
+		left: 0;
 	}
 
 	@include flex-center;
